force-app/main/default/objects/Lead_Transition__c/Lead_Transition__c.object-meta.xml
<CustomObject>
    <label>Lead Transition</label>
    <nameField>
        <displayFormat>Transition-{000000}</displayFormat>
        <label>Lead Transition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Transitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>