force-app/main/default/objects/Lead_Transition__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Lead Transitions</relationshipLabel>
    <relationshipName>Lead_Transitions</relationshipName>
    <type>Lookup</type>
</CustomField>