force-app/main/default/objects/Lead_Transition__c/fields/Edited_By__c.field-meta.xml
<CustomField>
    <fullName>Edited_By__c</fullName>
    <label>Edited By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>