force-app/main/default/objects/Lead_Transition__c/fields/Modified_date__c.field-meta.xml
<CustomField>
    <fullName>Modified_date__c</fullName>
    <label>Modified date</label>
    <type>DateTime</type>
</CustomField>