force-app/main/default/objects/Lead_Transition__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Lead Transitions</relationshipLabel>
    <relationshipName>Lead_Transitions</relationshipName>
    <type>Lookup</type>
</CustomField>