force-app/main/default/objects/Lead_Transition__c/fields/SDR__c.field-meta.xml
<CustomField>
    <fullName>SDR__c</fullName>
    <label>SDR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>