force-app/main/default/objects/Lead_Transition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lead__c</columns>
    <columns>Old_Value__c</columns>
    <columns>New_value__c</columns>
    <columns>Edited_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>